EXTRA_DIST =				\
	$(Data_DATA)

Datadir = $(datadir)/icons/hicolor/32x32/status

Data_DATA =				\
	computer.png			\
	input-keyboard.png		\
	input-mouse.png			\
	multimedia-player.png		\
	pda.png				\
	phone.png			\
	tablet.png			\
	video-display.png		\
	xfpm-ac-adapter.png		\
	xfpm-primary-000.png		\
	xfpm-primary-020.png		\
	xfpm-primary-040.png		\
	xfpm-primary-060.png		\
	xfpm-primary-080.png		\
	xfpm-primary-100.png		\
	xfpm-primary-000-charging.png	\
	xfpm-primary-020-charging.png	\
	xfpm-primary-040-charging.png	\
	xfpm-primary-060-charging.png	\
	xfpm-primary-080-charging.png	\
	xfpm-primary-100-charging.png	\
	xfpm-primary-charged.png		\
	xfpm-primary-missing.png		\
	xfpm-ups-000.png		\
	xfpm-ups-020.png		\
	xfpm-ups-040.png		\
	xfpm-ups-060.png		\
	xfpm-ups-080.png		\
	xfpm-ups-100.png		\
	xfpm-brightness-lcd.png
