appicondir = $(datadir)/icons/hicolor/48x48/apps
appicon_DATA =								\
    org.xfce.powermanager.png

statusiconsdir = $(datadir)/icons/hicolor/48x48/status
statusicons_DATA =                             \
    ac-adapter.png                      \
    battery-caution-charging.png        \
    battery-caution.png                 \
    battery-empty-charging.png          \
    battery-empty.png                   \
    battery-full-charged.png            \
    battery-full-charging.png           \
    battery-full.png                    \
    battery-good-charging.png           \
    battery-good.png                    \
    battery-low-charging.png            \
    battery-low.png                     \
    battery-missing.png                 \
    computer.png                        \
    input-keyboard.png                  \
    input-mouse.png                     \
    multimedia-player.png               \
    pda.png                             \
    phone.png                           \
    tablet.png                          \
    uninterruptible-power-supply.png    \
    video-display.png


EXTRA_DIST = $(appicon_DATA) $(statusicons_DATA)

