EXTRA_DIST =                            \
    $(Data_DATA)

Datadir = $(datadir)/icons/hicolor/48x48/status

Data_DATA =                             \
    ac-adapter.png                      \
    battery-caution-charging.png        \
    battery-caution.png                 \
    battery-empty-charging.png          \
    battery-empty.png                   \
    battery-full-charged.png            \
    battery-full-charging.png           \
    battery-full.png                    \
    battery-good-charging.png           \
    battery-good.png                    \
    battery-low-charging.png            \
    battery-low.png                     \
    battery-missing.png                 \
    computer.png                        \
    display-brightness.png              \
    input-keyboard.png                  \
    input-mouse.png                     \
    keyboard-brightness.png             \
    multimedia-player.png               \
    pda.png                             \
    phone.png                           \
    tablet.png                          \
    uninterruptible-power-supply.png    \
    video-display.png