EXTRA_DIST =				\
	$(Data_DATA)

Datadir = $(datadir)/icons/hicolor/scalable/status

Data_DATA =				\
    computer.svg			\
    display-brightness-symbolic.svg     \
    keyboard.svg			\
    mouse.svg			\
    multimedia-player.svg		\
    pda.svg				\
    phone.svg			\
    tablet.svg			\
    video-display.svg		\
    xfpm-ac-adapter.svg		\
    xfpm-ac-adapter-symbolic.svg		\
    xfpm-primary-000.svg		\
    xfpm-primary-000-symbolic.svg		\
    xfpm-primary-020.svg		\
    xfpm-primary-020-symbolic.svg		\
    xfpm-primary-040.svg		\
    xfpm-primary-040-symbolic.svg		\
    xfpm-primary-060.svg		\
    xfpm-primary-060-symbolic.svg		\
    xfpm-primary-080.svg		\
    xfpm-primary-080-symbolic.svg		\
    xfpm-primary-100.svg		\
    xfpm-primary-100-symbolic.svg		\
    xfpm-primary-000-charging.svg	\
    xfpm-primary-000-charging-symbolic.svg	\
    xfpm-primary-020-charging.svg	\
    xfpm-primary-020-charging-symbolic.svg	\
    xfpm-primary-040-charging.svg	\
    xfpm-primary-040-charging-symbolic.svg	\
    xfpm-primary-060-charging.svg	\
    xfpm-primary-060-charging-symbolic.svg	\
    xfpm-primary-080-charging.svg	\
    xfpm-primary-080-charging-symbolic.svg	\
    xfpm-primary-100-charging.svg	\
    xfpm-primary-100-charging-symbolic.svg	\
    xfpm-primary-charged.svg		\
    xfpm-primary-charged-symbolic.svg		\
    xfpm-primary-missing.svg		\
    xfpm-primary-missing-symbolic.svg		\
    xfpm-ups-000.svg		\
    xfpm-ups-020.svg		\
    xfpm-ups-040.svg		\
    xfpm-ups-060.svg		\
    xfpm-ups-080.svg		\
    xfpm-ups-100.svg		\
    xfpm-brightness-keyboard.svg
